# PeakRDL-Markdown

./: .coveragerc  .gitignore  .mdl_style.rb  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: conf.py  index.rst  minimal_example.md  minimal_example.rdl  requirements.txt  using_with_sphinx.rst
example/: accelera_generic_example.md  accelera_generic_example.rdl  accelera_generic_example_depth_1.md  minimal_example.md  minimal_example.rdl
src/peakrdl_markdown/: __init__.py  __peakrdl__.py  exporter.py
test/: __init__.py  exporter_test.py
