[tool.poetry]
name = "peakrdl_markdown"
version = "0.1.7"
description = "Export Markdown description from the systemrdl-compiler register model"
authors = ["Marek Pikuła <marek@serenitycode.dev>"]
maintainers = ["Marek Pikuła <marek@serenitycode.dev>"]
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
repository = "https://github.com/SystemRDL/PeakRDL-Markdown"
documentation = "https://peakrdl-markdown.readthedocs.io"
readme = "README.md"
packages = [{ include = "peakrdl_markdown", from = "src" }]

[tool.poetry.dependencies]
python = "^3.6.0"
systemrdl-compiler = "^1.25.0"
peakrdl = "^1.1.0"
py-markdown-table = "^0.3.3"

[tool.poetry.group.dev.dependencies]
pre-commit = [
    { version = "^2.0.0", python = ">=3.7,<3.9" },
    { version = "^3.7.0", python = ">=3.9" },
]

[tool.poetry.group.lint.dependencies]
packaging = { version = "^24.0", python = ">=3.7" }
black = [
    { version = "^22.0.0", python = ">=3.7,<3.8" },
    { version = "^24.4.0", python = ">=3.8" },
]
isort = { version = "^5.11.0", python = ">=3.7" }
mypy = "^0.971"
pydocstyle = "^6.1.1"
ruff = { version = "^0.3.7", python = ">=3.7" }

[tool.poetry.group.test.dependencies]
pytest = [
    { version = "^7.0.0", python = ">=3.6,<3.8" },
    { version = "^8.1.0", python = ">=3.8" },
]
pytest-cov = [
    { version = "^4.0.0", python = ">=3.6,<3.8" },
    { version = "^5.0.0", python = ">=3.8" },
]
coverage= {version = "^6.3", python = ">=3.7"}
coveralls = "^3.3.1"

[tool.poetry.group.doc.dependencies]
linuxdoc = "^20211220"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
m2r2 = "<0.3.3"

[tool.poetry.plugins."peakrdl.exporters"]
"markdown" = "peakrdl_markdown.__peakrdl__:Exporter"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "pep257"
